--- a/package.json
+++ b/package.json
@@ -5,18 +5,16 @@
   "repository": "",
   "author": "",
   "license": "",
+  "type": "module",
   "scripts": {
-    "dev": "cross-env VARIANT=global vuepress dev .",
-    "dev-cn": "cross-env VARIANT=cn vuepress dev .",
-    "start": "vuepress dev .",
-    "build": "cross-env VARIANT=global vuepress build .",
-    "build-cn": "cross-env VARIANT=cn vuepress build -d ./.vuepress/dist-cn ."
+    "dev": "cross-env VARIANT=global vitepress dev .",
+    "preview": "cross-env VARIANT=global vitepress preview . --port 4175",
+    "build": "cross-env VARIANT=global vitepress build .",
+    "build:cn": "cross-env VARIANT=cn vitepress build . --outDir .vitepress/dist-cn"
   },
   "devDependencies": {
-    "@vuepress/client": "2.0.0-beta.66",
     "cross-env": "^7.0.3",
-    "vue": "^3.3.4",
-    "vuepress": "2.0.0-beta.66",
-    "vuepress-theme-reco": "2.0.0-beta.67"
+    "vitepress": "^1.3.0",
+    "vue": "^3.3.4"
   }
 }
