--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
   "type": "module",
   "scripts": {
     "dev": "cross-env VARIANT=global vitepress dev .",
+    "dev:cn": "cross-env VARIANT=cn vitepress dev .",
     "preview": "cross-env VARIANT=global vitepress preview . --port 4175",
     "build": "cross-env VARIANT=global vitepress build .",
     "build:cn": "cross-env VARIANT=cn vitepress build . --outDir .vitepress/dist-cn"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
-    "vitepress": "^1.3.0",
+    "vitepress": "^1.3.4",
     "vue": "^3.3.4"
   }
 }
